# laptop

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  bootstrap.sh  laptop.yml  pyproject.toml
.claude/: settings.json
roles/laptop/files/: JJ.terminal  com.googlecode.iterm2.plist
roles/laptop/files/dotfiles/: gitignore  vimrc  zshrc
roles/laptop/files/dotfiles/config/: starship.toml
roles/laptop/files/dotfiles/config/nvim/: init.lua
roles/laptop/files/dotfiles/config/nvim/lua/: plugins.lua
roles/laptop/files/dotfiles/ssh/: config
roles/laptop/files/scripts/: synology-cloudsync-decrypt.py
roles/laptop/files/vscode/: settings.json
roles/laptop/handlers/: main.yml
roles/laptop/tasks/: backup.yml  dock.yml  dotfiles.yml  homebrew.yml  macos.yml  main.yml  mas.yml  restore.yml  scripts.yml  terminal.yml  vim.yml  vscode.yml
roles/laptop/templates/: backup.sh.j2  gitconfig.j2  restore.sh.j2
roles/laptop/vars/: main.yml
